<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
        name="Resultados"
        type="com.example.covid_19.Resultados" />
    </data>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="700dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/pandemia" />

        <TextView
            android:id="@+id/textView"
            style="@style/Estilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/pandemia"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/nombre"
            style="@style/Estilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/cuadro3"
            android:text="@={Resultados.nombre}"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text" />

        <EditText
            android:id="@+id/edad"
            style="@style/Estilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/cuadro3"
            android:text="@={Resultados.edad}"
            android:hint="@string/edad"
            android:inputType="numberDecimal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/ingresarB"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/ingresar" />

            <TextView
                android:id="@+id/resultado_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto"
                android:text="@={Resultados.resultadosText}"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/covid19B"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1.5"
                android:fontFamily="@font/roboto"
                android:text="@string/covid19" />

            <Button
                android:id="@+id/sintomasB"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="20dp"
                android:layout_weight="1.7"
                android:fontFamily="@font/roboto"
                android:text="@string/sintomas" />

            <Button
                android:id="@+id/indicacionB"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="20dp"
                android:layout_weight="2"
                android:fontFamily="@font/roboto"
                android:text="@string/indicacion" />
        </LinearLayout>


    </LinearLayout>

</layout>